<resources>
    <string name="app_name">EasyMeet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_account_found">No Account Found!</string>
    <string name="sign_up_message">This device doesn\'t have any account signed in.\nPlease Login or Sign Up to continue.</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="welcome_message">Welcome\nTo\nEasyMeat</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="please_wait">Please Wait…</string>
    <string name="sign_up_to_easymeet">Sign Up to EasyMeet</string>
    <string name="log_in_to_easymeet">Log In to EasyMeet</string>
    <string name="account_created">Account created successfully</string>
    <string name="account_creation_failed">Account creation failed. Please try again later.</string>
    <string name="login_failed">Log in failed. Please try again.</string>
    <string name="succesfully_logged_in">Successfully Logged In.</string>
    <string name="meeting_title">Title</string>
    <string name="meeting_description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="create_new_meeting">Create New Meeting</string>
    <string name="_1">1.</string>
    <string name="participant_email_id">Participant Email Id</string>
    <string name="meeting_participants">Meeting Participants:</string>
    <string name="add_participant">Add Participant</string>
    <string name="start_recording">Start Recording</string>
    <string name="my_meetings">My Meetings</string>
    <string name="sample_date">13/13/2019</string>
    <string name="sample_time">10:10</string>
    <string name="meeting_card_transition">meeting_card</string>
    <string name="loading_meetings">Loading Meetings…</string>
    <string name="no_meetings_found">No Meetings Found!</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="assign_task">Assign Task</string>
    <string name="assign_task_to">To:</string>
    <string name="task">Task:</string>
    <string name="meeting_transcription">Meeting Transcription</string>
    <string name="loading_sentiment">Loading Sentiment…</string>
    <string name="speaker_labels">Speaker Labels</string>
    <string name="speaker_0">Speaker 0</string>
    <string name="description">Meeting Description</string>
    <string name="title">Meeting Title</string>
    <string name="loading_keywords">Loading Keywords…</string>
    <string name="creating_meeting_please_wait">Creating meeting, please wait…</string>
    <string name="creator">Creator</string>
    <string name="sentiment">Sentiment</string>
    <string name="keywords">Keywords</string>
    <string name="channel_name">New Meeting</string>
    <string name="channel_description">Notify user about new meetings</string>
    <string name="assigned_to_me">Assigned To Me</string>
    <string name="assigned_by_me">Assigned By Me</string>
    <string name="meeting_location">Place</string>
    <string name="place">Meeting Place</string>
    <string name="tasks">tasks</string>
    <string name="assigner">Assigned By</string>
    <string name="status">Status</string>
    <string name="change_status">Change Status</string>
    <string name="pending">Pending</string>
    <string name="done">Done</string>

    <string-array name="spinner_options">
        <item>My Meetings</item>
        <item>Tasks</item>
    </string-array>
</resources>
