<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="fitXY"
            android:src="@drawable/list" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:text="@string/assign_task"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/assign_task_to"
            android:paddingEnd="16dp"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="#e2e2e2"
            android:paddingStart="16dp"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:text="@string/email"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry,SpUsage"
            android:id="@+id/email_id"/>
    </LinearLayout>

    <TextView
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        android:text="@string/task"
        android:textColor="@color/colorAccent"
        android:textSize="18dp"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/task"
        android:textSize="16dp"
        android:inputType="textMultiLine"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,LabelFor,SpUsage" />

</LinearLayout>