<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/assign_task_button"
            android:layout_toEndOf="@id/sr_no"
            android:gravity="center_vertical"
            android:background="@color/transparent"
            android:hint="@string/participant_email_id"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            tools:ignore="Autofill,SpUsage" />

        <TextView
            android:id="@+id/sr_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/_1"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/assign_task_button"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/assign_task"
            android:textColor="#304FFE"
            android:textSize="16dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="bottom"
        android:background="@android:color/black" />
</androidx.cardview.widget.CardView>