<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:transitionName="@string/meeting_card_transition"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:clickable="true"
        android:id="@+id/meeting_cv"
        android:focusable="true"
        android:stateListAnimator="@xml/meeting_card_elevation_animator"
        android:layout_height="108dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toStartOf="@id/date_time_ll"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/meeting_title"
                    android:padding="4dp"
                    android:textSize="16dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/meeting_title"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/meeting_desc"
                    android:textColor="@android:color/black"
                    android:padding="4dp"
                    android:text="@string/meeting_description"
                    android:textSize="14dp"
                    android:ellipsize="end"
                    android:layout_gravity="fill"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="SpUsage" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_time_ll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/meeting_date"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#03A9F4"
                    android:gravity="center"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/sample_date"
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black" />

                <TextView
                    android:id="@+id/meeting_time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#FF5722"
                    android:gravity="center"
                    android:text="@string/sample_time"
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/date_time_ll"
                android:background="@android:color/black" />
        </RelativeLayout>

        <ImageView
            android:scaleType="fitXY"
            android:src="@drawable/card_view_border"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.cardview.widget.CardView>
</LinearLayout>