<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    tools:context=".activities.FinalMeetingResultActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_layout"
        android:clipToPadding="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false">

            <LinearLayout
                android:id="@+id/date_time_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/creator_text_view"
                android:clipToPadding="false"
                android:padding="16dp"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp">

                    <TextView
                        android:id="@+id/meeting_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="12dp"
                        android:text="@string/date"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        tools:ignore="SpUsage" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp">

                    <TextView
                        android:id="@+id/meeting_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="12dp"
                        android:text="@string/time"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        tools:ignore="SpUsage" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:id="@+id/creator_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/creator"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                tools:ignore="SpUsage" />

            <androidx.cardview.widget.CardView
                android:id="@+id/meeting_title_tv_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_time_layout"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/title"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/meeting_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/meeting_title"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        tools:ignore="SpUsage" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/meeting_desc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/meeting_title_tv_layout"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/description"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/meeting_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/meeting_description"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        tools:ignore="SpUsage" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/participants_list_rv_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/meeting_desc_layout"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/meeting_participants"
                        android:textColor="@color/colorAccent" />

                    <include layout="@layout/participants_list_layout" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/meeting_transciption_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/participants_list_rv_layout"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/meeting_transcription"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/meeting_transciption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/meeting_transcription"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        tools:ignore="SpUsage" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/speaker_labels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/meeting_transciption_layout"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/speaker_labels"
                        android:textColor="@color/colorAccent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/speaker_labels_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sentiment_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/speaker_labels"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sentiment_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/sentiment"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/meeting_sentiment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/loading_sentiment"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        tools:ignore="SpUsage" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/keywords_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sentiment_layout"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/keywords_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/keywords"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/keywords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/loading_keywords"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        tools:ignore="SpUsage" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="#AA00FF"
            app:title="Meeting Detail"
            app:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>
</RelativeLayout>